# walrusfox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bridge.rs  client.rs  config.rs  installer.rs  lib.rs  main.rs  server.rs
src/protocol/: events.rs  mod.rs  native_messaging.rs
src/utils/: cli.rs  logging.rs  mod.rs  themes.rs
