[package]
name = "walrusfox"
version = "2.7.4"
edition = "2021"
authors = ["Pywalfox Contributors", "linket@ymail.com"]
description = "Linux-only Rust native messaging host for Pywalfox Extension (Firefox)"
license = "MIT"
rust-version = "1.89.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2.3"
ctrlc = "3.4"
