[package]
name = "walrusfox"
version = "2.7.4"
edition = "2021"
authors = ["Pywalfox Contributors", "linket@ymail.com"]
description = "Linux-only Rust native messaging host for Pywalfox Extension (Firefox)"
license = "Mozilla Public License, version 2.0"
rust-version = "1.89.0"

[[bin]]
name = "walrusfox"
path = "src/bin/walrusfox.rs"

[[bin]]
name = "walrusfox-ext"
path = "src/bin/walrusfox_ext.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2.3"
ctrlc = "3.4"
